--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "description": "A PHP library for validating and formatting CPF and CNPJ numbers.",
     "type": "library",
     "keywords": ["cpf", "cnpj", "validation", "formatting"],
-    "version": "1.0.1",
+    "version": "1.0.2",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "license": "MIT",
     "autoload": {
         "psr-4": {
